--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,9 @@
             "url": "https://asset-packagist.org"
         }
     ],
+    "config": {
+        "process-timeout": 1800,
+    },
     "scripts": {
         "post-install-cmd": "php init --env=Development --overwrite=n"
     }
