--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         }
     ],
     "config": {
-        "process-timeout": 1800,
+        "process-timeout": 1800
     },
     "scripts": {
         "post-install-cmd": "php init --env=Development --overwrite=n"
