--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "php": ">=5.6.0",
         "yiisoft/yii2": "~2.0.11",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0"
+        "yiisoft/yii2-swiftmailer": "~2.0.0",
+        "kartik-v/yii2-widget-select2": "*",
+        "bower-asset/bootstrap-datepicker": "*",
+        "bower-asset/bootstrap-daterangepicker": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
